# rust_assignment2

./: Cargo.toml  sample_code.txt
src/: deserialize_main.rs  main.rs  person.rs
src/proto/: person.proto
